test/fails/bad_tags/assign11.lgl
void main() {
    vec<2> x = [1., 1.]; // Cannot declare a variable as the top type
}